Add rate limiting and regex filtering to InMemoryAppender
Enhanced InMemoryAppender with per-appender log level, rate limiting (via new RateLimiter), and regex-based whitelist/blacklist filtering (via new LoggerFilter). Logging in JShellService now uses Log4j2 instead of System.out/err. Updated log4j2.properties to use wildcard logger filter. These changes improve performance and control during high-volume logging and allow dynamic runtime reconfiguration.